work process sectiongacha tugatildi desktop and mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="container hero">
       <div class="row">
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h1 class="hero__title text-light pt-2">Go digital with us</h1>
           <p class="hero__subtitle h4 text-light">
             We have designed hundreds of websites and helped improve their
@@ -44,12 +44,94 @@
           </p>
           <button type="button" class="btn btn-light">See Portofolio</button>
         </div>
-        <div class="col-6 position-relative">
-          <img
-            class="position-absolute top-0 visually-hidden"
-            src="./img/hero-right.png"
-            alt=""
-          />
+        <div class="col-12 col-md-6">
+          <img class="hero-img" src="./img/hero-right.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="cliets text-center">
+      <div class="container">
+        <h2 class="cliets__title font-weight-normal">Client</h2>
+        <p class="cliets__subtitle">
+          Using Our Experience To Make Your Digital Experience Brighter
+        </p>
+        <div class="cliets__img">
+          <img class="me-5" src="./img/microsoft.png" alt="" />
+          <img class="me-5 mt-2" src="./img/google.png" alt="" />
+          <img class="mt-4" src="./img/amazon.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <img src="./img/clients.png" alt="" />
+          </div>
+          <div class="services__right col-12 col-md-6">
+            <span class="services__span">Who We Help</span>
+            <h3 class="services__title">
+              Specific challenges require specific solutions
+            </h3>
+            <p class="servives__subtitle">
+              Some of the industries our digital agency specialises in
+            </p>
+            <div class="row services__cards">
+              <div class="col-6">
+                <img src="./img/clients-icon1.svg" alt="" />
+                <span class="services__card--title">Web & Mobile Apps</span>
+                <p class="services__card--subtitle">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+              <div class="col-6">
+                <img src="./img/clients-icon2.svg" alt="" />
+                <span class="services__card--title">Design Services</span>
+                <p class="services__card--subtitle">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
+
+            <div class="row services__cards">
+              <div class="col-6">
+                <img src="./img/clients-icon3.svg" alt="" />
+                <span class="services__card--title">SEO</span>
+                <p class="services__card--subtitle">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+              <div class="col-6">
+                <img src="./img/clients-icon4.svg" alt="" />
+                <span class="services__card--title">Security Tester</span>
+                <p class="services__card--subtitle">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="work__process">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 work__process-left">
+            <h3 class="work__process-title">How does our process work?</h3>
+            <p class="work__process-subtitle">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="btn btn-dark work__process-btn">See Details</div>
+          </div>
+          <div class="col-12 col-md-6">
+            <img class="work__process-img" src="./img/work-proces.png" alt="" />
+          </div>
         </div>
       </div>
     </section>
